<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mainBackground"
    tools:context="com.example.yalinne.cleanandorder.WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Clean and Order"
        android:textColor="@color/titleText"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:id="@+id/textView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="70dp"
        android:background="@color/contentBackground"
        android:id="@+id/listView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/groupName"
                android:id="@+id/textView3" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextGroup"
                android:linksClickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/members"
                android:id="@+id/textView4" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText1" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText2" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText3" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText4" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:gravity="right">

                <Button
                    android:text="@string/next"
                    android:background="@color/blueElements"
                    android:textColor="@color/titleText"
                    android:id="@+id/button"
                    android:layout_marginTop="20dp"
                    android:layout_column="18"
                    android:onClick="onClick"/>

            </TableRow>

        </TableLayout>

    </ScrollView>




</RelativeLayout>
